[package]
name = "combolist_helper"
version = "1.0.0"
edition = "2021"
authors = ["ℛedemption"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17"
rand = "0.8"
regex = "1"  # Include the regex crate for pattern matching
